feat: Instagram bolumu CMS'e baglandi ve dinamik hale getirildi
INSTAGRAM CMS ENTEGRASYONU:
- Yeni Instagram data yapisi (homedeco + leshow)
- Dil bazli ayri gorseller (tr/en)
- CMS'den dinamik icerik yonetimi
- InstaGrid component guncellendi

YAPILAN DEGISIKLIKLER:
- content/config.ts: Yeni Instagram schema
- content/home/tr.json: Turkce Instagram verileri
- content/home/en.json: Ingilizce Instagram verileri
- InstaGrid.astro: Dinamik props sistemi
- index.astro (tr/en): Yeni prop yapisi
- admin/config.yml: CMS Instagram yonetimi

OZELLIKLER:
- Dil bazli ayri baslik ve gorsel
- Dinamik Instagram URL'leri
- CMS'den kolay icerik yonetimi
- Responsive tasarim korundu

SONUC: Instagram bolumu artik tamamen CMS'den yonetilebilir

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -22,6 +22,59 @@ editor:
 load_config_file: false
 
 collections:
+  # ANASAYFA İÇERİKLERİ
+  - name: "home"
+    label: "🏠 Anasayfa İçerikleri"
+    files:
+      - label: "Türkçe Anasayfa"
+        name: "tr"
+        file: "src/content/home/tr.json"
+        fields:
+          - label: "📱 Instagram Bölümü"
+            name: "instagram"
+            widget: "object"
+            fields:
+              - label: "🏠 Homedeco Kazakhstan"
+                name: "homedeco"
+                widget: "object"
+                fields:
+                  - {label: "Başlık", name: "title", widget: "string", default: "Homedeco Kazakhstan"}
+                  - {label: "Kullanıcı Adı", name: "username", widget: "string", default: "@homedecokazakhstan"}
+                  - {label: "Instagram URL", name: "instagram_url", widget: "string", default: "https://instagram.com/homedecokazakhstan"}
+                  - {label: "Görsel", name: "image", widget: "image"}
+              - label: "🎭 Leshow Moscow"
+                name: "leshow"
+                widget: "object"
+                fields:
+                  - {label: "Başlık", name: "title", widget: "string", default: "Leshow Moskova"}
+                  - {label: "Kullanıcı Adı", name: "username", widget: "string", default: "@leshowmoscow"}
+                  - {label: "Instagram URL", name: "instagram_url", widget: "string", default: "https://instagram.com/leshowmoscow"}
+                  - {label: "Görsel", name: "image", widget: "image"}
+      - label: "İngilizce Anasayfa"
+        name: "en"
+        file: "src/content/home/en.json"
+        fields:
+          - label: "📱 Instagram Section"
+            name: "instagram"
+            widget: "object"
+            fields:
+              - label: "🏠 Homedeco Kazakhstan"
+                name: "homedeco"
+                widget: "object"
+                fields:
+                  - {label: "Title", name: "title", widget: "string", default: "Homedeco Kazakhstan"}
+                  - {label: "Username", name: "username", widget: "string", default: "@homedecokazakhstan"}
+                  - {label: "Instagram URL", name: "instagram_url", widget: "string", default: "https://instagram.com/homedecokazakhstan"}
+                  - {label: "Image", name: "image", widget: "image"}
+              - label: "🎭 Leshow Moscow"
+                name: "leshow"
+                widget: "object"
+                fields:
+                  - {label: "Title", name: "title", widget: "string", default: "Leshow Moscow"}
+                  - {label: "Username", name: "username", widget: "string", default: "@leshowmoscow"}
+                  - {label: "Instagram URL", name: "instagram_url", widget: "string", default: "https://instagram.com/leshowmoscow"}
+                  - {label: "Image", name: "image", widget: "image"}
+
   # SEKTÖRLER - Sektör Yönetimi
   - name: "sectors"
     label: "Sektörler"
