--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -324,7 +324,7 @@ fairs:
       location_en: RIYADH, SAUDI ARABIA
       name_en: SAUDI LIFESTYLE WEEK
     visuals:
-      logo: /images/logo-saudi.jpg
+      logo: /images/saudilifestyleweek.png
       background_image: /images/gorsel-saudi.jpg
   - representative:
       hide_phone: true
