--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -626,3 +626,25 @@ fairs:
     visuals:
       logo: /images/ekran-resmi-2025-09-24-14.32.50.png
       background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
+  - basic_info:
+      description_tr: TARIM, TARIM TEKNOLOJİLERİ VE HAYVANCILIK FUARI
+      sector: Diğer
+      hide_dates: false
+      location_tr: KAZAN, TATARİSTAN
+      start_date: 2026-07-08
+      description_en: AGRICULTURE, AGRICULTURAL TECHNOLOGIES, AND LIVESTOCK FAIR
+      end_date: 2026-07-10
+      name_tr: AGROVOLGA 2026
+      location_en: KAZAN, TATARSTAN
+      name_en: AGROVOLGA 2026
+    representative:
+      hide_phone: false
+      team_member: Pınar Yalçın
+    settings:
+      order: 1
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    visuals:
+      background_image: /images/ekran-resmi-2025-09-25-09.56.32.png
+      logo: /images/ekran-resmi-2025-09-25-09.57.28.png
