--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -188,7 +188,7 @@ fairs:
       phone: +90 216 123 45 68
       title_tr: Satış Direktörü
       title_en: Sales Director
-      team_member: Seval Arslan
+      team_member: Pınar Yalçın
       hide_phone: true
   - settings:
       show_in_slider: false
