--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -604,3 +604,25 @@ fairs:
     visuals:
       background_image: /images/ekran-resmi-2025-09-25-09.56.32.png
       logo: /images/ekran-resmi-2025-09-25-09.57.28.png
+  - basic_info:
+      description_tr: ULUSLARARASI GELİNLİK FUARI
+      sector: Moda
+      hide_dates: false
+      location_tr: MİLANO, İTALYA
+      start_date: 2026-02-21
+      description_en: INTERNATIONAL BRIDAL FAIR
+      end_date: 2026-02-23
+      name_tr: SI SPOSAITALIA COLLEZIONI
+      location_en: MILAN, ITALY
+      name_en: SI SPOSAITALIA COLLEZIONI
+    representative:
+      hide_phone: false
+      team_member: Seval Arslan
+    settings:
+      order: 1
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    visuals:
+      logo: /images/ekran-resmi-2025-11-03-17.00.14.png
+      background_image: /images/immagine2.jpg
