--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -109,7 +109,7 @@ fairs:
       name_en: THE ONE MILANO
     representative:
       hide_phone: false
-      team_member: Yeşim Kırgül
+      team_member: Gül Baykara
     settings:
       order: 1
       show_in_slider: false
