--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -670,3 +670,25 @@ fairs:
     visuals:
       logo: /images/ekran-resmi-2025-11-06-10.22.27.png
       background_image: /images/ekran-resmi-2025-11-06-10.22.56.png
+  - basic_info:
+      description_tr: ULUSLARARASI MOBİLYA VE DEKORASYON FUARI
+      sector: Mobilya ve Mobilya Yan Sanayi
+      hide_dates: false
+      location_tr: KÖLN, ALMANYA
+      start_date: 2026-01-20
+      description_en: INTERNATIONAL FURNITURE AND DECORATION FAIR
+      end_date: 2026-01-23
+      name_tr: IMM COLOGNE
+      location_en: COLOGNE, GERMANY
+      name_en: IMM COLOGNE
+    representative:
+      hide_phone: false
+      team_member: Pınar Yalçın
+    settings:
+      order: 2
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    visuals:
+      logo: /images/imm_cologne_840.jpg
+      background_image: /images/ekran-resmi-2025-12-18-10.03.06.png
