--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -349,10 +349,10 @@ fairs:
       description_en: INTERNATIONAL TRADE FAIR
       date_tr: 14 - 16 MAYIS 2025
       end_date: 2026-05-15
-      name_tr: " RUSSIAN & ISLAMIC WORLD COOPERATION EXPO"
+      name_tr: KAZAN FORUM & RUSYA HELAL EXPO
       location_en: KAZAN, TATARSTAN
       date_en: 14 - 16 MAY 2025
-      name_en: " RUSSIAN & ISLAMIC WORLD COOPERATION EXPO"
+      name_en: ECONOMIC FORUM RUSSIA - ISLAMIC WORLD KAZAN FORUM
     visuals:
       logo: /images/fair-logo-kazan.jpg
       background_image: /images/fair-bg-kazan.png
