--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -591,7 +591,7 @@ fairs:
       description_tr: ULUSLARARASI AYDINLATMA, ELEKTRİK MÜHENDİSLİĞİ VE GÜVENLİK
         SİSTEMLERİ FUARI
       sector: Elektrik, Enerji ve Aydınlatma
-      hide_dates: true
+      hide_dates: false
       location_tr: ASTANA, KAZAKİSTAN
       start_date: 2026-10-27
       description_en: INTERNATIONAL LIGHTING, ELECTRICAL ENGINEERING AND SECURITY SYSTEMS FAIR
